--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --harmony-async-await app.js"
+    "start": "nohup nodemon app.js >> log 2>&1 &"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,7 @@
     "blueimp-md5": "^2.6.0",
     "koa": "^2.0.0",
     "koa-better-body": "^3.0.2",
-    "koa-send": "^3.3.0",
-    "koa-static": "^3.0.0"
+    "koa-static": "^3.0.0",
+    "nodemon": "^1.11.0"
   }
 }
